// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote component matches a snapshot 1`] = `
<figure>
  <img
    src="/path/to/image"
  />
  <figcaption>
    "
    My Quote
    "
     -- by Me
  </figcaption>
</figure>
`;

exports[`Quote component matches a snapshot when name isn't provided 1`] = `
<figure>
  <img
    src="/path/to/image"
  />
  <figcaption>
    "
    My Quote
    "
  </figcaption>
</figure>
`;
